# Piperine

./: .gitignore  CMakeLists.txt
example/: CMakeLists.txt  main.cpp
example/etc/: post_compilation.sh  pre_compilation.sh
example/shaders/: simple.frag  simple.frag.spv  simple.vert  simple.vert.spv
include/piperine/: allocators.h  definitions.h  device.h  instance.h  interface.h  interface_builder.h  macros.h  messenger.h  public_utility.h  swapchain.h  synchronization.h  utility.h  vulkan_types.h  vulkan_types_forward_declarations.h  vulkan_utility.h
lib/: allocators.cpp  device.cpp  instance.cpp  interface.cpp  messenger.cpp  public_utility.cpp  swapchain.cpp  utility.cpp  vulkan_types.cpp
src/: application.cpp  application.h  attribute_generator.h  buffers.cpp  buffers.h  commands.cpp  commands.h  device.cpp  device.h  info_types.h  input_generator.h  main.cpp  mesh.cpp  mesh.h  pipeline.cpp  pipeline.h  shader_types.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  utility.cpp  utility.h  vma_impl.cpp  vulkan_containers.h  vulkan_types.cpp  vulkan_types.h  window.cpp  window.h
